# EnvVault

./: .gitignore  Cargo.toml  HANDOFF.md  LIMITATIONS.md  PERFORMANCE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/envvault-app/: Cargo.toml  tauri.conf.json
crates/envvault-app/capabilities/: default.json
crates/envvault-app/icons/: icon.icns
crates/envvault-app/src/: clipboard.rs  commands.rs  error.rs  events.rs  guard.rs  main.rs  state.rs
crates/envvault-app/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/envvault-app/ui/src/: App.tsx  bindings.ts  index.css  main.tsx  store.test.ts  store.ts
crates/envvault-app/ui/src/lib/: errors.ts  format.ts  password.ts  share.test.ts  share.ts
crates/envvault-app/ui/src/screens/: Home.tsx  Onboarding.tsx  Unlock.tsx
crates/envvault-app/ui/src/screens/home/: AboutDialog.tsx  AddEnvDialog.tsx  AddProjectDialog.tsx  CommandPalette.tsx  EnvTabs.tsx  GuardBanner.tsx  HealthDashboard.tsx  ImportBundleDialog.tsx  ImportDialog.tsx  SecretDialog.tsx  SecretsTable.test.tsx  SecretsTable.tsx  ShareDialog.tsx  ShareKeyDialog.tsx  Sidebar.tsx  VaultBackupDialog.tsx
crates/envvault-app/ui/src/ui/: components.tsx  dialog.tsx  toast.tsx
crates/envvault-cli/: Cargo.toml
crates/envvault-cli/examples/: seed-demo-vault.rs  seed-health-demo.rs
crates/envvault-cli/src/: main.rs
crates/envvault-cli/tests/: cli.rs
crates/envvault-core/: Cargo.toml
crates/envvault-core/src/: crypto.rs  detect.rs  envfile.rs  error.rs  guard.rs  health.rs  lib.rs  project.rs  ratelimit.rs  scanner.rs  secret.rs  share.rs  vault.rs
crates/envvault-core/tests/: crud.rs  crypto_vault.rs  guard.rs  health.rs  import.proptest-regressions  import.rs  migration.rs  portability.rs  rotation_table.rs  security.rs  share.rs  storage.rs
crates/envvault-core/tests/fixtures/: vault-v1.age  vault-v1.age.bak.1
scripts/: check-no-http.sh
