[workspace]
resolver = "2"
members = [
    "crates/envvault-core",
    "crates/envvault-cli",
    "crates/envvault-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/envvault/envvault"

[workspace.dependencies]
envvault-core = { path = "crates/envvault-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
age = "0.12"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
