[workspace]
resolver = "2"
members = [
    "crates/envvault-core",
    "crates/envvault-cli",
    "crates/envvault-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/envvault/envvault"

[workspace.dependencies]
envvault-core = { path = "crates/envvault-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
age = { version = "0.12", features = ["armor"] }
dirs = "6"
fs2 = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# scrypt at N=2^18 is ~30x slower unoptimized, which would make debug-build
# unlocks take ~18s instead of <1s. Optimize just the crypto crates in dev so
# development builds and the test suite feel like the shipped app.
[profile.dev.package.scrypt]
opt-level = 3
[profile.dev.package.salsa20]
opt-level = 3
[profile.dev.package.pbkdf2]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.hmac]
opt-level = 3
[profile.dev.package.chacha20poly1305]
opt-level = 3
[profile.dev.package.chacha20]
opt-level = 3
[profile.dev.package.poly1305]
opt-level = 3
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.x25519-dalek]
opt-level = 3
[profile.dev.package.aead]
opt-level = 3
