[package]
name = "envvault-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EnvVault desktop app (Tauri shell). Thin command layer — all logic lives in envvault-core."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
envvault-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"
