[package]
name = "envvault-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EnvVault desktop app (Tauri shell). Thin command layer — all logic lives in envvault-core."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
envvault-core = { workspace = true, features = ["specta"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
uuid.workspace = true
chrono.workspace = true
zeroize.workspace = true
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"

# macOS: secrets are written to NSPasteboard with the ConcealedType marker so
# clipboard managers do not archive them (spec §4.6). Other platforms use the
# clipboard plugin's Rust API. This target table MUST stay last in the file:
# any [dependencies] key added below a [target] header silently becomes
# platform-only (that exact mistake broke Linux/Windows CI once already).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = "0.3"
