[package]
name = "envvault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `envvault` CLI: injects vault secrets into a child process environment."

[[bin]]
name = "envvault"
path = "src/main.rs"

[dependencies]
envvault-core.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive", "wrap_help"] }
rpassword = "7"
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
