[package]
name = "envvault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EnvVault core: crypto, vault I/O, and domain logic. Pure library — no Tauri, no CLI dependencies."

[dependencies]
age.workspace = true
chrono.workspace = true
dirs.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true
# Optional, app-only: lets the Tauri app export core enums (KeyType) into the
# generated TypeScript bindings. The CLI never enables this; core stays pure.
specta = { version = "=2.0.0-rc.25", optional = true, features = ["derive"] }

[features]
specta = ["dep:specta"]

[dev-dependencies]
tempfile = "3"
